packages/core/src/dialog/DialogContent.css
.saltDialogContent {
  color: var(--salt-content-primary-foreground);
  min-height: var(--salt-text-lineHeight);
  overflow-y: auto;
  background: var(--salt-container-primary-background);

  margin-left: var(--salt-spacing-200);
  margin-right: var(--salt-spacing-300);
  padding-left: var(--salt-spacing-100);
  border-bottom: var(--salt-size-border) var(--salt-separable-borderStyle) transparent;
  box-shadow: none;
  flex: 1;
}

.saltDialogContent-scroll {
  border-bottom: var(--salt-size-border) var(--salt-separable-borderStyle) var(--salt-separable-tertiary-borderColor);
  box-shadow: var(--salt-overlayable-shadow-scroll);
}

